GMemoryInputStream/GMemoryOutputStream: make these properly subclassable

The async methods were directly invoking their own implementations of
the sync methods, making it impossible for a subclass to reimplement
them.

https://bugzilla.gnome.org/show_bug.cgi?id=664635